Stop using flex wrap for mobile

--- a/app/assets/stylesheets/styles/nav_bar.scss
+++ b/app/assets/stylesheets/styles/nav_bar.scss
@@ -18,6 +18,11 @@
   justify-content: space-between;
   align-items: center;
 
+  section {
+    display: flex;
+    align-items: center;
+  }
+
   div.search-bar {
     height: 28px;
     min-width: 354px;
