--- a/app/assets/stylesheets/styles/search_bar.scss
+++ b/app/assets/stylesheets/styles/search_bar.scss
@@ -6,7 +6,7 @@
   align-items: center;
   flex: 1;
   max-width: 570px;
-
+  margin-right: 15px;
 
   input {
     width: 100%;
